--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,6 @@
 @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/containers";
 @import "~sass-rem/rem";
 @import "mixins/utility";
 @import "base/variables";
@@ -16,3 +15,9 @@
 @import "components/modals";
 @import "layout/header";
 @import "layout/footer";
+@import "sections/hero";
+@import "sections/cashback";
+@import "sections/cashback-categories";
+@import "sections/cashback-conditions";
+@import "sections/mobile-apps";
+@import "sections/cashback-rules";
