--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -5,21 +5,13 @@ html {
         font-size: 14px;
     }
 
-    @include media-breakpoint-down(md) {
-        font-size: 13px;
-    }
-
     @include media-breakpoint-down(sm) {
-        font-size: 12px;
+        font-size: 16px;
     }
 }
 
 .locked {
     overflow: hidden;
-}
-
-body {
-    overflow-x: hidden;
 }
 
 %sr-only {
@@ -43,11 +35,30 @@ body {
     font-family: StyreneBLC, sans-serif;
     background-color: #f5f5f6;
     padding: rem(48px 0);
+    position: relative;
+    overflow: hidden;
 
     &__line {
         position: absolute;
-        top: rem(-50px);
         right: 0;
+        left: 0;
         z-index: 1;
+
+        svg {
+            width: 100%;
+            height: auto;
+        }
+
+        @include media-breakpoint-down(md) {
+            display: none;
+        }
+
+        &--top {
+            top: rem(-50px);
+        }
+
+        &--bottom {
+            bottom: rem(-930px);
+        }
     }
 }
