--- a/src/assets/scss/sections/_cashback-rules.scss
+++ b/src/assets/scss/sections/_cashback-rules.scss
@@ -9,13 +9,36 @@
         grid-template-columns: 1fr 1fr;
         position: relative;
         z-index: 10;
+
+        @include media-breakpoint-down(lg) {
+            border-radius: rem(32px);
+        }
+
+        @include media-breakpoint-down(md) {
+            grid-template-columns: 1fr;
+            text-align: center;
+            margin-top: rem(-80px);
+        }
     }
 
     &__col {
         padding: rem(80px);
 
+        @media (width <= 1700px) {
+            padding: rem(48px);
+        }
+
+        @include media-breakpoint-down(lg) {
+            padding: rem(32px);
+        }
+
         &:nth-of-type(odd) {
             border-right: 1px solid #b7b7b7;
+
+            @include media-breakpoint-down(md) {
+                border: none;
+                border-bottom: 1px solid #b7b7b7;
+            }
         }
     }
 
@@ -25,12 +48,35 @@
         line-height: 120%;
         letter-spacing: -2px;
         margin-bottom: rem(32px);
+
+        @media (width <= 1700px) {
+            font-size: rem(38px);
+        }
+
+        @include media-breakpoint-down(lg) {
+            font-size: rem(32px);
+            margin-bottom: rem(24px);
+        }
+
+        @include media-breakpoint-down(md) {
+            font-size: rem(20px);
+            letter-spacing: -1px;
+        }
     }
 
     &__text {
         color: #b7b7b7;
         font-size: rem(20px);
-        line-height: 140%; /* 28px */
+        line-height: 140%;
+        font-family: Roboto, sans-serif;
+
+        @media (width <= 1700px) {
+            font-size: rem(18px);
+        }
+
+        @include media-breakpoint-down(lg) {
+            font-size: rem(16px);
+        }
     }
 
     &__btn {
@@ -38,5 +84,15 @@
 
         max-width: rem(270px);
         margin-top: rem(48px);
+
+        @include media-breakpoint-down(lg) {
+            margin-top: rem(24px);
+        }
+
+        @include media-breakpoint-down(md) {
+            max-width: rem(230px);
+            margin: auto;
+            margin-top: rem(24px);
+        }
     }
 }
