--- a/src/assets/scss/sections/_cashback.scss
+++ b/src/assets/scss/sections/_cashback.scss
@@ -1,17 +1,24 @@
 .cashback {
-    &__container {
+    &__wrap {
         @extend %container;
 
-        position: relative;
-    }
-
-    &__wrap {
         position: relative;
         min-height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         z-index: 10;
+
+        @media (width <= 1700px) {
+            min-height: 1px;
+            margin-top: rem(40vh);
+            margin-bottom: rem(30vh);
+        }
+
+        @include media-breakpoint-down(xxl) {
+            margin-top: rem(200px);
+            margin-bottom: rem(150px);
+        }
     }
 
     &__circle {
@@ -32,31 +39,72 @@
         letter-spacing: -4px;
         text-align: left;
 
+        @media (width <= 1700px) {
+            font-size: rem(38px);
+            max-width: rem(500px);
+            max-height: rem(500px);
+        }
+
+        @include media-breakpoint-down(xxl) {
+            font-size: rem(24px);
+            letter-spacing: normal;
+        }
+
+        @include media-breakpoint-down(xl) {
+            width: 100vw;
+            height: 100vw;
+        }
+
+        @include media-breakpoint-down(sm) {
+            max-width: rem(320px);
+            max-height: rem(320px);
+            font-size: rem(24px);
+            letter-spacing: normal;
+        }
+
         &::before {
             content: "";
-            width: calc(100% + 110px);
-            height: calc(100% + 110px);
+            width: calc(100% + rem(110px));
+            height: calc(100% + rem(110px));
             position: absolute;
             left: rem(-55px);
             top: rem(-55px);
             border-radius: 50%;
             background: #eaa0ad;
             z-index: -10;
+
+            @include media-breakpoint-down(xl) {
+                width: calc(100% + rem(60px));
+                height: calc(100% + rem(60px));
+                left: rem(-30px);
+                top: rem(-30px);
+            }
         }
 
         &::after {
             content: "";
-            width: calc(100% + 300px);
-            height: calc(100% + 300px);
+            width: calc(100% + rem(300px));
+            height: calc(100% + rem(300px));
             position: absolute;
             left: rem(-150px);
             top: rem(-150px);
             border-radius: 50%;
             background: #ebc2c9;
             z-index: -20;
+
+            @include media-breakpoint-down(xl) {
+                width: calc(100% + rem(160px));
+                height: calc(100% + rem(160px));
+                left: rem(-80px);
+                top: rem(-80px);
+            }
         }
 
         &-wrap {
+            @include media-breakpoint-down(xl) {
+                transform: translateX(-10px);
+            }
+
             &::before {
                 content: "";
                 background-image: url("@/assets/img/blur.png");
@@ -64,6 +112,7 @@
                 height: 100%;
                 position: absolute;
                 background-size: contain;
+                background-repeat: no-repeat;
                 inset: 0;
                 margin: auto;
                 border-radius: 50%;
@@ -80,6 +129,16 @@
             position: relative;
             margin-bottom: rem(44px);
 
+            @media (width <= 1700px) {
+                font-size: rem(220px);
+            }
+
+            @include media-breakpoint-down(md) {
+                font-size: rem(152px);
+                margin-bottom: rem(28px);
+                text-shadow: rem(0px 40px 39px) rgba(91 7 21 / 25%);
+            }
+
             &::before {
                 content: "";
                 background-image: url("@/assets/img/cashback_from.svg");
@@ -90,6 +149,12 @@
                 bottom: rem(15px);
                 left: rem(20px);
                 filter: drop-shadow(rem(0px 4px 4px) rgba(0 0 0 / 20%));
+
+                @include media-breakpoint-down(lg) {
+                    width: rem(35px);
+                    height: rem(35px);
+                    left: rem(5px);
+                }
             }
 
             &::after {
@@ -102,12 +167,25 @@
                 top: rem(44px);
                 right: rem(-40px);
                 filter: drop-shadow(rem(0px 20px 30px) rgba(0 0 0 / 20%));
+
+                @include media-breakpoint-down(lg) {
+                    width: rem(38px);
+                    height: rem(38px);
+                    top: rem(10px);
+                    right: rem(-25px);
+                    filter: drop-shadow(rem(0 15px 30px) rgba(0 0 0 / 30%));
+                }
             }
         }
 
         &-text {
             width: 95%;
             margin-top: rem(10px);
+
+            @media (width <= 1700px) {
+                width: 110%;
+                margin-top: 6px;
+            }
 
             &--right {
                 text-align: right;
@@ -119,48 +197,147 @@
         position: absolute;
         left: 0;
         top: rem(-150px);
+
+        @media (width <= 1700px) {
+            img {
+                max-width: 170px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            top: rem(-130px);
+            left: rem(-10px);
+
+            img {
+                max-width: 130px;
+            }
+        }
     }
 
     &__kettle {
         position: absolute;
         right: rem(-160px);
         bottom: rem(120px);
+
+        @media (width <= 1700px) {
+            bottom: rem(60px);
+            right: rem(-220px);
+
+            img {
+                max-width: 150px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            right: rem(-35px);
+            bottom: rem(50px);
+
+            img {
+                max-width: 95px;
+            }
+        }
     }
 
     &__airpods {
         position: absolute;
-        top: -270px;
-        left: -230px;
+        top: rem(-270px);
+        left: rem(-230px);
+
+        @media (width <= 1700px) {
+            img {
+                max-width: 170px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            display: none;
+        }
     }
 
     &__airpods-max {
         position: absolute;
-        top: -40px;
-        right: -420px;
+        top: rem(-40px);
+        right: rem(-420px);
+
+        @media (width <= 1700px) {
+            right: rem(-320px);
+
+            img {
+                max-width: 220px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            display: none;
+        }
     }
 
     &__donut {
         position: absolute;
-        top: 70px;
-        left: -420px;
+        top: rem(70px);
+        left: rem(-420px);
+
+        @media (width <= 1700px) {
+            img {
+                max-width: 150px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            left: rem(-50px);
+            bottom: 0;
+            top: 0;
+            margin: auto;
+            height: fit-content;
+
+            img {
+                max-width: 95px;
+            }
+        }
     }
 
     &__push {
         position: absolute;
 
+        @media (width <= 1700px) {
+            img {
+                max-width: 240px;
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            img {
+                max-width: 165px;
+            }
+        }
+
         &--1 {
             left: -320px;
             bottom: 0;
+
+            @include media-breakpoint-down(xl) {
+                left: 0;
+                bottom: rem(-80px);
+            }
         }
 
         &--2 {
             top: -120px;
             right: -140px;
+
+            @include media-breakpoint-down(xl) {
+                right: 0;
+                top: rem(-80px);
+            }
         }
 
         &--3 {
             right: -190px;
             bottom: -150px;
+
+            @include media-breakpoint-down(xl) {
+                display: none;
+            }
         }
     }
 
@@ -169,6 +346,15 @@
         right: 0;
         left: 0;
         margin: auto;
-        display: none;
+        z-index: -40;
+
+        @media (width <= 1700px) {
+            bottom: rem(60px);
+            width: fit-content;
+
+            img {
+                max-width: 120px;
+            }
+        }
     }
 }
