feat: full animated

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -62,3 +62,15 @@ html {
         }
     }
 }
+
+@keyframes pulsate {
+    from {
+        transform: scale(0.5);
+        opacity: 1;
+    }
+
+    to {
+        transform: scale(1.25);
+        opacity: 0;
+    }
+}
