--- a/src/assets/scss/sections/_mobile-apps.scss
+++ b/src/assets/scss/sections/_mobile-apps.scss
@@ -9,6 +9,7 @@
         margin-top: 0;
         z-index: 10;
         position: relative;
+        min-height: 50vh;
 
         @include media-breakpoint-down(lg) {
             grid-template-columns: 1fr 1fr;
@@ -18,6 +19,7 @@
             grid-template-columns: 1fr;
             gap: rem(48px);
             margin-top: rem(40px);
+            min-height: rem(550px);
         }
     }
 
@@ -94,16 +96,16 @@
     }
 
     &__bonus-card {
-        transform: scale(0.735);
-        left: -83px;
+        transform: scale(0.765);
+        left: -73px;
         top: 81px;
-        transition: 500ms;
         transform-origin: right bottom;
         position: absolute;
+        max-width: rem(460px);
 
         @include media-breakpoint-down(lg) {
-            top: rem(40px);
-            left: rem(-60px);
+            top: rem(30px);
+            left: rem(-50px);
         }
     }
 }
