--- a/src/assets/scss/sections/_cashback.scss
+++ b/src/assets/scss/sections/_cashback.scss
@@ -72,6 +72,9 @@
             border-radius: 50%;
             background: #eaa0ad;
             z-index: -10;
+            transform: scale(0);
+            transition: 1000ms;
+
 
             @include media-breakpoint-down(xl) {
                 width: calc(100% + rem(60px));
@@ -91,6 +94,8 @@
             border-radius: 50%;
             background: #ebc2c9;
             z-index: -20;
+            transform: scale(0);
+            transition: 1000ms;
 
             @include media-breakpoint-down(xl) {
                 width: calc(100% + rem(160px));
@@ -100,14 +105,23 @@
             }
         }
 
-        &-wrap {
+        &--layers {
+            &::after,
+            &::before {
+                transform: scale(1);
+                animation: pulsate 2.5s ease-out 0s infinite;
+                animation-direction: normal;
+            }
+        }
+
+        &-content {
             @include media-breakpoint-down(xl) {
                 transform: translateX(-10px);
             }
 
             &::before {
                 content: "";
-                background-image: url("@/assets/img/blur.png");
+                background-image: url("@/assets/img/blur.png?as=webp");
                 width: 100%;
                 height: 100%;
                 position: absolute;
@@ -343,10 +357,16 @@
 
     &__cheese {
         position: absolute;
+        bottom: rem(-100px);
         right: 0;
         left: 0;
         margin: auto;
+        width: fit-content;
         z-index: -40;
+
+        img {
+            max-width: 190px;
+        }
 
         @media (width <= 1700px) {
             bottom: rem(60px);
